feat: 메인 홈 화면 UI 구조 구축 및 지도/가게 리스트 기능 구현
- Custom AppBar 및 아이콘 에셋 적용
- Kakao Map WebView 연동 및 .env 설정 추가
- StoreCard 컴포넌트 구현 및 Figma 디자인(Shadow) 적용
- StoreSection 및 메인 스크롤 레이아웃(LayoutBuilder) 구성
- 더미 데이터를 활용한 리스트 렌더링 테스트

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,9 @@ dependencies:
   shared_preferences: ^2.5.4
   webview_flutter: ^4.13.0
   url_launcher: ^6.3.2
+  google_fonts: ^6.3.3
+  flutter_svg: ^2.2.3
+  kakao_map_plugin: ^0.3.7
 
 dev_dependencies:
   flutter_test:
@@ -59,13 +62,10 @@ dev_dependencies:
 
 # The following section is specific to Flutter packages.
 flutter:
-
-  # The following line ensures that the Material Icons font is
-  # included with your application, so that you can use the icons in
-  # the material Icons class.
   uses-material-design: true
 
   assets:
+    - assets/icon/
     - assets/env/.env
 
   # To add assets to your application, add an assets section, like this:
