--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   intl: ^0.20.2
   shared_preferences: ^2.5.4
   webview_flutter: ^4.13.0
+  url_launcher: ^6.3.2
 
 dev_dependencies:
   flutter_test:
