--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -66,6 +66,7 @@ flutter:
 
   assets:
     - assets/icon/
+    - assets/icon/BottomNavBar/
     - assets/env/.env
 
   # To add assets to your application, add an assets section, like this:
